2008-07-02 Maximilien Cuony
    * FS#79
    * FS#82
    * Patching inline with a patch from Ryan Patterson

2008-07-02 Maximilien Cuony
    * FS#78
    * 0.5 packed, and uploaded to the server !

2008-07-01 Maximilien Cuony
    * Some final edits
    * Autosave working agin

2008-06-29 Maximilien Cuony
    * Api working

2008-06-28 Maximilien Cuony
    * Making xpcom realy working
    * Updating doc
    * Updating locates
    * Version number set to 0.5BETA

2008-06-26 Maximilien Cuony
    * Url with numbers for google apps
    * xpcom on windows seem ok.
    * Debug code

2008-06-25 Maximilien Cuony
    * Xpcom on linux implemented

2008-06-17 Maximilien Cuony
    * Patching gpgAuh

2008-06-16  Maximilien Cuony
    * FS#17

2008-06-14  Maximilien Cuony
    * Fixed export problem
    * Patching gpgAuth

2008-06-10  Maximilien Cuony
    * Cleaning Xpcom code

2008-06-07  Maximilien Cuony
    * °o° Xpcom for windows !

2008-06-05  Maximilien Cuony
    * Domains with - for google apps

2008-05-23  Maximilien Cuony
    * XpCom finished... for linux.

2008-05-22  Maximilien Cuony
    * Tests on the Xpcom
    * FS#59

2008-05-21  Achraf Cherti
	* creating generate_docs.sh, to generate documentation directory width Natural Docs
    * understanding naturaldocs and documenting constants and two function in the external API

2008-05-11  Maximilien Cuony
    * New logo

2008-05-10  Maximilien Cuony
	* Showing svn version number in options
	* Inline system almost done.
	* FS#49
	* More documentation

2008-05-09  Maximilien Cuony
	* Translating lot of strings
	* Changed to logo for inline system

2008-05-08  Maximilien Cuony
	* Inline system is now usable :)

2008-05-07  Maximilien Cuony
	* Implemented sub key for key selection (but widout the new keys' list system)
	* Add flexibility to some dialogs

2008-05-06  Maximilien Cuony
	* Reforming key lists communication system, implementing subkey system.
	* New key list implemented for options.

2008-05-05  Maximilien Cuony