@@ -1,4 +1,9 @@
+2008-07-11 Maximilien Cuony
+    *  FS#75
+    * XpCom disabled.
+
 2008-07-02 Maximilien Cuony
+    * Fixed problem with google app for domains (#88 and #83)
     * FS#79
     * FS#82
     * Patching inline with a patch from Ryan Patterson
